Fix: corrected card text wrap

--- a/src/components/SortableCard/sortablecard.module.css
+++ b/src/components/SortableCard/sortablecard.module.css
@@ -3,12 +3,8 @@
     cursor: pointer;
     padding: 10px;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     background-color: #fff;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* border-radius: 8px; */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
     transition: all 0.2s ease-in-out;
     position: relative;
